--- a/jqtouch/themes/css/jqtouch.css
+++ b/jqtouch/themes/css/jqtouch.css
@@ -1444,6 +1444,7 @@ body {
   text-decoration: inherit;
   -webkit-border-radius: 8px;
   border-radius: 8px;
+  border-width:0;
   -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0 1px 3px, rgba(0, 0, 0, 0.4) 0 0 0 3px, rgba(255, 255, 255, 0.3) 0 1px 0 3px;
   box-shadow: rgba(0, 0, 0, 0.4) 0 1px 3px, rgba(0, 0, 0, 0.4) 0 0 0 3px, rgba(255, 255, 255, 0.3) 0 1px 0 3px;
 }
